--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5e9fd33951e6d0237d398a42" data-wf-site="5e9fd33981f2df21e34cc172">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio - Webflow HTML website template</title>
+  <title>Portfolio</title>
   <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="width=device-width, initial-scale=1" name="viewport">
